# ace_llm_logic

./: .gitignore  Agents.md  Dockerfile  README.md  pyproject.toml
APE/: ape.sh
APE/prolog/utils/: trees_to_ascii.pl
python/ace_llm_logic/: __main__.py
tests/: test_pipeline.py
