
[project]
name = "ace_llm_logic"
version = "0.1.0"
description = "LLM + ACE + Logic pipeline"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["openai", "requests"]
requires-python = ">=3.8"

[project.scripts]
ace-llm-logic = "ace_llm_logic.__main__:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
[tool.setuptools.packages.find]
where = ["python"]
